[project]
name = "callussegmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bioio>=3.2.0",
    "bioio-lif>=1.4.2",
    "bioio-ome-tiff>=1.4.0",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "vtk>=9.5.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "ruff>=0.15.0",
]
